maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:25: error: ':' expected but ',' found.
def markAround(x,y) ={
                ^JediEscaper:48: error: identifier expected but '}' found.
}
^